# minimal-generators

./: README.md  pyproject.toml
src/minimal_generators/: __main__.py  cli.py  determinants.py  generators.py  polynomials.py  timing.py  utils.py
src/minimal_generators.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
